<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout">

    <TextView

        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/lookAtMyGUI"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textView3"
        android:text="@string/linearButtonText" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flag" />

    <CheckBox
        android:id="@+id/checkBox4"

        android:layout_above="@id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linearCheckBox" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageButton3"
        android:layout_marginBottom="-31dp"
        android:text="@string/linearSwitch" />

    <EditText
        android:id="@+id/editText3"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/linearText"
        android:inputType="textPersonName" />

</RelativeLayout>