<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_rowSpan="4"
    android:layout_columnSpan="2"
    android:layout_gravity="fill"
    android:layout_weight="1"
    tools:context=".GridLayout">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/lookAtMyGUI"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/linearButtonText" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/linearCheckBox" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="163dp"
        android:layout_height="73dp"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/linearSwitch" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="249dp"
        android:layout_height="84dp"
        android:layout_row="3"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/linearText"
        android:inputType="textPersonName" />
</GridLayout>